objects/Slide_Note__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Slide Notes</relationshipLabel>
        <relationshipName>Slide_Notes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting</label>
        <referenceTo>Meeting__c</referenceTo>
        <relationshipLabel>Slide Notes</relationshipLabel>
        <relationshipName>Slide_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Microsite_ID__c</fullName>
        <externalId>true</externalId>
        <label>Microsite ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Presentation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Presentation ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slide_ID__c</fullName>
        <externalId>true</externalId>
        <label>Slide ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Slide Note</label>
    <nameField>
        <displayFormat>SN-{000000}</displayFormat>
        <label>Slide Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slide Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>